# a-share-research-assistant

./: .env.example  .gitignore  DATA_SOURCE_PLAN.md  IMPLEMENTATION_PLAN.md  PRODUCT_BRIEF.md  README.md  SYSTEM_DESIGN.md  architecture.html  architecture_diagram.html  pipeline.html  pyproject.toml  test_5_samples.py  test_agentic.py  test_router_quick.py
src/ashare_research_assistant/: __init__.py
src/ashare_research_assistant/agents/: evaluator.py  main_agent.py  orchestrator.py  router.py  search.py  skill_registry.py  skills.py  stock_research.py  synthesis.py  tool_registry.py  tools.py
src/ashare_research_assistant/cli/: main.py  renderer.py  session.py
src/ashare_research_assistant/config/: settings.py
src/ashare_research_assistant/core/models/: __init__.py  clarification.py  evidence.py  memory.py  opinion.py  provider.py  research.py  session.py  trace.py
src/ashare_research_assistant/llm/: chatgpt_oauth.py  codex_provider.py
src/ashare_research_assistant/memory/: __init__.py  profile_store.py
src/ashare_research_assistant/providers/: __init__.py  bundle.py  container.py  web_search_provider.py
src/ashare_research_assistant/providers/akshare/: __init__.py  hotlist_provider.py  news_provider.py
src/ashare_research_assistant/providers/base/: __init__.py  (+4 more)
src/ashare_research_assistant/services/: clarification_engine.py  price_target_engine.py  trace_store.py
src/ashare_research_assistant/tests/: conftest.py  test_main_agent.py  test_providers.py
src/ashare_research_assistant/web/: app.py  md_renderer.py  server.py
tests/: e2e_test.py
(+5 files in other folders)
